# Match-Based-Passage-Identifier

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: Convex.h  Image.h  MBPISampler.h  NarrowFinder.h  RTree.h  Renderer.h  TicToc.h  Types.h  Utils.h
res/RealMaps/: 4_tur_multi.pgm  4_tur_multi.yaml  4_tur_on.pgm  4_tur_on.yaml  8_tur_arka.pgm  8_tur_arka.yaml  8_tur_multi.pgm  8_tur_multi.yaml  8_tur_on.pgm  8_tur_on.yaml  8_tur_on_yeni.pgm  8_tur_on_yeni.yaml  fakultegroundtruth.pgm  lab_parkur_map.pgm
src/: Image.cpp  MBPISampler.cpp  NarrowFinder.cpp  Rtree.cpp  Utils.cpp  main.cpp
